2001-12-24  Patrick Burke  <takhisisi@yahoo.com.au>
	* usecode/ucxt/*: Added 'return' flag to opcodes.txt, better error
	messages to handle badly edited opcodes.txt files, and correct RTS
	handling for the CALL opcode.

2001-12-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/ucxt/src/ucfunc.cc: fixed intrinsic bug, re-used opcode bug 

2001-12-24  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Removed bugs from debugging statements.

2001-12-24  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Implemented apply_damage() intrinsic.

2001-12-23  Jeff Freedman  <jeff@amy.nerble.net>

	* paths.cc (Offscreen_pathfinder_client), actions.cc: Added 'best'
	location to aim for when finding a path off the screen.
	* actors.cc (approach_another):  Fiddled with speed/delay.
	* schedule.cc (Hound_schedule):  Speed it up a bit.

2001-12-23  Ryan Nunn  <triforce@merlin.net.au>
	* gumps/AudioOptions_gump.cc, gumps/GameplayOptions_gump.cc,
	  gumps/VideoOptions_gump.cc : Errors, Errors, Errors
	* msvcstuff/Exult.dsp : Adding Enabled_button.*
	* msvcstuff/Exult_flx.dsp : Removing shapes.

2001-12-23  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc: Show arrows hitting target.
	* combat.cc: Duelists equip proper weapon and attack targets.

2001-12-22  Jeff Freedman  <jeff@amy.nerble.net>

	* npcnear.cc: Sleeping monsters shouldn't attack until awakened.
	* usecode/intrinsics.cc,gamewin.cc,gamewin.h: Added 'armageddon' flag.

2001-12-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.am: really fixed subdir order now... (data depends on tools)

2001-12-21  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc (Dragging_info): Use remove_this(true) to remove obj.
	* paths.cc (Offscreen_pathfinder_client): Fast_pathfinder checks lift.
	* actors.cc: remove_this(): Don't delete schedule.
	* actors.cc: move():  If entering world, set dormant.
